# plox

./: .gitignore  README.md  plox.sh  pyproject.toml  test.sh
examples/: shadow.lox
src/lox/: __init__.py  ast_printer.py  environment.py  expr.py  interpreter.py  lox.py  lox_callable.py  lox_class.py  lox_function.py  lox_instance.py  lox_return.py  parser.py  resolver.py  runtime_error.py  scanner.py  stmt.py  token.py  token_type.py
