[project]
name = "plox-lang"
version = "0.0.1"
license = {file = "LICENSE"}
description = "a python implementation of the lox language from crafting interpreters"
authors = [
    {name = "Adam Miller", email = "miller@adammiller.io"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/adammillerio/plox"

[project.optional-dependencies]
dev = [
    "pyre-check>=0.9.22",
    "ruff>=0.6.9",
]

[tool.uv]
dev-dependencies = [
    "pyre-check>=0.9.22",
    "ruff>=0.6.9",
]

[project.scripts]
plox = "lox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lox"]
